Add start button to game

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flappy Style Game</title>
+  <title>Flappy Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <div class="game">
-    <!-- Score display -->
+    <!-- Start Button -->
+    <button id="startBtn">Start Game</button>
+
+    <!-- Score -->
     <div id="score">Score: 0</div>
 
-    <!-- Player (bird) -->
+    <!-- Player -->
     <div id="player"></div>
 
-    <!-- Pipes (top & bottom) -->
+    <!-- Pipes -->
     <div id="pipeTop" class="pipe"></div>
     <div id="pipeBottom" class="pipe"></div>
   </div>
